# GRUPO_LIGA

./: .gitattributes  README.md  push.sh
agente_nfs/: README.md  agente_nfs-0.1.0-py3-none-any.whl  main  main.py  pyproject.toml  requirements.txt
agente_nfs/data/: .~lock.202401_NF_header.csv#  .~lock.202401_NF_items.csv#  202401_NF_header.csv  202401_NF_items.csv
relatorio/: pyproject.toml
