[project]
name = "agente-nfs"
version = "0.1.0"
description = ""
authors = [
    {name = "Alec-santos",email = "alecsantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "agente_nfs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
